[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/ui_stuff/HeartBar.gd" type="Script" id=1]
[ext_resource path="res://ui/heart.tscn" type="PackedScene" id=2]

[node name="HeartBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TopLayer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Heart01" parent="TopLayer" instance=ExtResource( 2 )]

[node name="Heart02" parent="TopLayer" instance=ExtResource( 2 )]
margin_left = 20.0
margin_right = 20.0

[node name="Heart03" parent="TopLayer" instance=ExtResource( 2 )]
margin_left = 40.0
margin_right = 40.0

[node name="Heart04" parent="TopLayer" instance=ExtResource( 2 )]
margin_left = 60.0
margin_right = 60.0

[node name="Heart05" parent="TopLayer" instance=ExtResource( 2 )]
margin_left = 80.0
margin_right = 80.0

[node name="BottomLayer" type="Control" parent="."]
margin_top = 20.0
margin_right = 40.0
margin_bottom = 60.0

[node name="Heart01" parent="BottomLayer" instance=ExtResource( 2 )]
margin_left = 20.0
margin_right = 20.0

[node name="Heart02" parent="BottomLayer" instance=ExtResource( 2 )]

[node name="Heart03" parent="BottomLayer" instance=ExtResource( 2 )]
margin_left = 40.0
margin_right = 40.0

[node name="Heart04" parent="BottomLayer" instance=ExtResource( 2 )]
margin_left = 60.0
margin_right = 60.0

[node name="Heart05" parent="BottomLayer" instance=ExtResource( 2 )]
margin_left = 80.0
margin_right = 80.0
